# sr-tuner

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-frontend.yml  ci-python.yml  ci-rust.yml
.serena/: project.yml
docs/: api-reference.md  architecture.md  cli-reference.md  comprehensive-reference.md  data-pipeline.md  degradation-pipeline.md  desktop.md  development.md  device-backend.md  frontend.md  gui_bridge.md  inference.md  training.md  workspace.md
envs/: build-release.ps1  build-release.sh  build.ps1  build.sh  clean.sh
examples/frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
examples/frontend/src/: App.tsx  index.css  main.tsx
examples/src-tauri/: Cargo.toml  tauri.conf.json
examples/src-tauri/binaries/: sidecar-dev-wrapper.sh
examples/src-tauri/capabilities/: default.json
examples/src-tauri/icons/: icon.icns
examples/src-tauri/src/: lib.rs  main.rs  sidecar.rs
frontend/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx
frontend/src/__mocks__/: api.ts
frontend/src/hooks/: useComparisonLoader.ts  useDatasetSSE.ts  useSSEConnection.ts  useTrainingSSE.ts
frontend/src/lib/: SRProjManager.ts  api-types.ts  api.ts  eta.ts  events.ts  metrics.ts  namingPattern.ts  path.ts  scanDatasets.ts  srproj.ts  tokens.css  useSaveTrigger.ts  vramEstimate.ts
frontend/src/screens/: ProjectScreen.tsx
frontend/src/store/: checkpointStore.ts  datasetStore.ts  inferenceStore.ts  modelStore.ts  projectStore.ts  runConfigStore.ts  trainingStore.ts  uiStore.ts
frontend/src/test-utils/: resetStores.ts
scripts/: build-sidecar.ps1  build-sidecar.sh  build.ps1  build.sh  sidecar_entry.py
sr-engine/: .gitignore  README.md  pyproject.toml
sr-engine/.tokensave/: branch-meta.json  config.json  tokensave.db
sr-engine/configs/: default.yaml
sr-engine/configs/datasets/: video_pairs.yaml
sr-engine/configs/train/: base.yaml
sr-engine/docs/: architecture.md  cli-reference.md  development.md  gui_bridge.md  training.md  workspace.md
sr-engine/envs/: build.sh  verify_env.py
sr-engine/envs/docker/: Dockerfile.cuda  Dockerfile.rocm
sr-engine/src/sr_engine/: __init__.py  workspace.py
sr-engine/src/sr_engine/cli/: __init__.py  cmd_dataset.py  cmd_env.py  cmd_infer.py  cmd_model.py  cmd_serve.py  cmd_train.py  helpers.py  main.py  workspace_commands.py
sr-engine/src/sr_engine/configs/models/: rrdb_esrgan.yaml
sr-engine/src/sr_engine/data/: __init__.py  dataset_builder.py  dataset_health.py  dataset_validator.py  datasets.py  degrade.py  transforms.py  video_extract.py
sr-engine/src/sr_engine/device/: backend.py  kernels.py
sr-engine/src/sr_engine/engine/: __init__.py  inference.py  metrics.py  metrics_stream.py  tiling.py  trainer.py
sr-engine/src/sr_engine/gui_bridge/: __init__.py  jobs.py  protocol.py  server.py
sr-engine/src/sr_engine/models/: __init__.py  checkpoint.py  losses.py  registry.py
sr-engine/src/sr_engine/models/archs/: __init__.py  rrdbnet.py  swinir.py
sr-engine/src/sr_engine/utils/: __init__.py  config.py  io.py  logging.py  progress.py
sr-engine/src/sr_engine/utils/configs/: default.yaml
sr-engine/src/sr_engine/utils/configs/datasets/: video_pairs.yaml
sr-engine/src/sr_engine/utils/configs/train/: base.yaml
sr-engine/tests/: conftest.py  test_backend.py  test_checkpoint.py  test_cli_dataset_configs.py  test_cli_env.py  test_cli_helpers.py  test_cli_infer.py  test_cli_model.py  test_cli_project.py  test_cli_serve.py  test_cli_train_configs.py  test_cli_workspace.py  test_config.py  test_dataset_builder.py  test_dataset_health.py  test_dataset_validator.py  test_datasets.py  test_degrade.py  test_godot_workflow.py  test_gui_bridge_jobs.py  test_gui_bridge_protocol.py  test_gui_bridge_server.py  test_inference.py  test_io.py  test_kernels.py  test_logging.py  test_losses.py  test_metrics.py  test_metrics_stream.py  test_model_instance.py  test_models.py  test_progress.py  test_trainer.py  test_transforms.py  test_video_extract.py  test_workspace.py
src-tauri/: AppImageBuilder.yml  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: env_installer.rs  lib.rs  main.rs
src/sr_engine/: workspace.py
src/sr_engine/api/: __init__.py  app.py  callbacks.py  deps.py  event_manager.py  middleware.py  progress.py  schemas.py  task_manager.py  workers.py
src/sr_engine/cli/: cmd_dataset.py  cmd_env.py  cmd_infer.py  cmd_model.py  cmd_serve.py  cmd_train.py  helpers.py  main.py  workspace_commands.py
src/sr_engine/data/: __init__.py  dataset_builder.py  dataset_health.py  dataset_merge.py  dataset_validator.py  datasets.py  degrade.py  ffmpeg_extractor.py  transforms.py  video_extract.py
src/sr_engine/device/: __init__.py  backend.py  kernels.py
src/sr_engine/engine/: __init__.py  inference.py  metrics.py  tiling.py  (+2 more)
tests/: conftest.py  test_amp.py  test_cli_env.py  test_cli_helpers.py  test_cli_infer.py  test_cli_serve.py  test_cli_train_configs.py  test_cli_workspace.py  test_command_schema.py  test_config.py  test_config_schema.py  test_dataset_builder.py  test_dataset_merge.py  test_dataset_validator.py  test_datasets.py  test_degrade.py  test_ffmpeg_extractor.py  test_gui_bridge_config.py  test_gui_bridge_jobs.py  test_gui_bridge_protocol.py  test_hardware.py  test_inference.py  test_kernels.py  test_logging.py  test_losses.py  test_metrics.py  test_model_instance.py  test_models.py  test_trainer.py  test_transforms.py  test_video_extract.py  test_workspace.py
(+150 files in other folders)
