[project]
name = "sr-engine"
version = "0.1.0"
description = "Super-resolution engine for video/image data with CUDA and ROCm support"
requires-python = "==3.11.*"
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "pillow>=10.0",
    "tqdm>=4.66",
    # 💡 torch removed from here to allow targeted backend installations
]

[project.scripts]
srengine = "sr_engine.cli.main:cli"
dataset = "sr_engine.cli.cmd_dataset:dataset"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]