[project]
name = "sr-engine"
version = "0.1.0"
description = "Super-resolution engine for video/image data with CUDA and ROCm support"
requires-python = "==3.11.*"
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "pillow>=10.0",
    "tqdm>=4.66",
    # 💡 torch removed from here to allow targeted backend installations
]

[project.scripts]
srengine = "sr_engine.cli.main:cli"
workspace = "sr_engine.cli.workspace_commands:workspace"
project = "sr_engine.cli.workspace_commands:project"
dataset = "sr_engine.cli.cmd_dataset:dataset"
env = "sr_engine.cli.cmd_env:env"
infer = "sr_engine.cli.cmd_infer:infer"
model = "sr_engine.cli.cmd_model:model"
train = "sr_engine.cli.cmd_train:train"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]