[project]
name = "sr-engine"
version = "0.1.0"
description = "Super-resolution engine for video/image data with CUDA and ROCm support"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "pillow>=10.0",
    "tqdm>=4.66",
]

[project.scripts]
srengine = "sr_engine.cli.main:cli"
workspace = "sr_engine.cli.workspace_commands:workspace"
project = "sr_engine.cli.workspace_commands:project"
dataset = "sr_engine.cli.cmd_dataset:dataset"
env = "sr_engine.cli.cmd_env:env"
infer = "sr_engine.cli.cmd_infer:infer"
model = "sr_engine.cli.cmd_model:model"
serve = "sr_engine.cli.cmd_serve:serve"
train = "sr_engine.cli.cmd_train:train"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.3",
    # torch removed from here to prevent default installation of CUDA-heavy wheels
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "gpu: tests that require a CUDA/ROCm GPU (skipped if not available)",
    "integration: tests that exercise cross-module paths or external resources",
    "slow: tests that take longer than 5 seconds",
    "network: tests that download resources (e.g. VGG weights)",
    "cli: tests that invoke the Click CLI runner",
    "unit: fast isolated unit tests with no external dependencies",
]

[tool.coverage.run]
source = ["sr_engine"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]