[package]
name = "sr-tuner"
version = "0.1.0"
description = "SR Tuner — Super-resolution model training and inference"
authors = ["sr-tuner"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "sr_tuner_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "sr-tuner"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json"] }
libc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
