[package]
name = "sr-tuner"
version = "0.1.0"
description = "SR Tuner — Super-resolution model training & fine-tuning desktop app"
authors = []
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "sr_tuner_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "sr-tuner"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
zip = "2"

[features]
default = []
# bundled-sidecar is auto-enabled in release builds via custom-protocol
custom-protocol = ["tauri/custom-protocol", "bundled-sidecar"]
bundled-sidecar = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
